setting dialog container to black to avoid style collapsing

--- a/src/app/pages/invoice/components/multiple-payment-modal/multiple-payment-modal.component.scss
+++ b/src/app/pages/invoice/components/multiple-payment-modal/multiple-payment-modal.component.scss
@@ -132,6 +132,6 @@
   }
 
   .mat-mdc-dialog-container .mdc-dialog__surface {
-    background-color: transparent !important;
+    background-color: #111 !important;
   }
 }
